--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,42 @@ ul
     display: block;
     padding: 0 30px;
     opacity: 1;
+    position: fixed;
+    left: 270px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0.3s ease;
+}
+.section.back.section
+{
+    z-index: 1;
+}
+.section.active
+{
+    z-index: 2;
+    opacity: 1;
+    animation: slideSection 1s ease ;
+    
+}
+@keyframes slideSection
+{
+    0%
+    {
+        transform: translateX(100%);
+    }
+    100%
+    {
+        transform: translateX(0%);
+    }
 }
 .hidden{
     display: none !important;
 }
-.main-content
-{
-    padding-left: 270px;
-}
+
 .padd-15
 {
     padding-left: 15px;
@@ -149,6 +177,7 @@ ul
     justify-content: center;
     align-items: center;
     z-index: 10;
+    transition: all 0.3s ease;
 
 }
 .aside .logo
@@ -210,6 +239,7 @@ ul
     display: none;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s ease;
  }
  .aside .nav-toggler span
  {
@@ -645,9 +675,30 @@ h3.profession
     {
         left: -270px;
     }
+    .aside.open 
+    {
+        left: 0;
+    }
     .main-content
     {
         padding-left: 0;
+    }
+    .aside .nav-toggler
+    {
+        display: flex;
+        left: 30px;
+    }
+    .aside .nav-toggler.open 
+    {
+        left: 300px;
+    }
+    .section
+    {
+        left: 0;
+    }
+    .section.open
+    {
+        left: 270px;
     }
     .about .about-content .personal-info .info-item p span
     {
