--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,13 @@ body {
   line-height: 1.5;
   font-size: 16px;
   font-family: "Poppins", sans-serif;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    180deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(48, 46, 77, 1) 87%,
+    rgba(48, 46, 77, 1) 100%
+  );
 }
 * {
   margin: 0;
@@ -31,12 +38,10 @@ body {
 }
 ul {
   list-style: none;
-  display:flex ;
+  display: flex;
   flex-wrap: wrap;
-
 }
 .section {
-  background: var(--text-black-900);
   overflow-y: auto;
   overflow-x: hidden;
   transition: all 0.3s ease;
@@ -137,14 +142,13 @@ ul {
   margin-left: 1000px;
 }
 .aside .nav li {
-margin: 0 5px;
+  margin: 0 5px;
 }
 .aside .nav li a {
   font-size: 16px;
   font-weight: 600;
   color: var(--bg-black-50);
   padding: 8px 15px;
-
 }
 .aside .nav li a.active {
   color: var(--skin-color);
@@ -497,13 +501,14 @@ h3.profession {
   margin-bottom: 60px;
 }
 .contact .contact-info-item {
-  margin-left: 200px;
-  flex: 0 0 25%;
+  margin-left: 50px;
+  flex: 0 0 10%;
   max-width: 25%;
   text-align: center;
 }
 .contact .contact-info-item .icon {
   display: inline-block;
+  
 }
 .contact .contact-info-item .fa {
   font-size: 25px;
@@ -514,7 +519,7 @@ h3.profession {
   font-weight: 700;
   color: var(--bg-black-50);
   text-transform: capitalize;
-  margin: 15px 0 5px;
+  margin: px 0 5px;
 }
 .contact .contact-info-item p {
   font-size: 16px;
@@ -540,16 +545,29 @@ h3.profession {
   margin-bottom: 30px;
 }
 .contact .contact-form .form-item .form-control {
-  width: 50%;
-  height: 50px;
-  border-radius: 25px;
-  background: var(--bg-black-900);
-  border: 1px solid var(--bg-black-50);
-  padding: 10px 25px;
-  font-size: 16px;
+  position: relative;
+  display: block;
+  margin-top: 10px;
+  margin-left: 250px;
   color: var(--text-back-700);
   transition: all 0.3s ease;
 }
+.contact .contact-form .form-item .form-style {
+  padding: 13px 20px;
+  padding-left: 50px;
+  height: 48px;
+  width: 50%;
+  font-weight: 500;
+  border-radius: 10px;
+  font-size: 14px;
+  line-height: 22px;
+  outline: none;
+  background-color:aliceblue;
+  border: none;
+  box-shadow: var(--shadow);
+  
+}
+
 .contact .contact-form .form-item .form-control:focus {
   box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
 }
@@ -557,7 +575,7 @@ h3.profession {
   height: 100px;
 }
 .contact .contact-form .btn {
-  margin-left: 0;
+  margin-left: 410px;
   height: 50px;
   padding: 0 50px;
 }
